--- a/last.css
+++ b/last.css
@@ -136,3 +136,14 @@
     text-decoration: none;
 
 }
+
+.linklog2{
+    font-size: 20px;
+    text-decoration: none;
+    border: 2.5px dotted black;
+    padding: 10px;
+    margin-top: 300px;
+    margin-left: 100px;
+    color: black;
+    position: absolute;
+}
